--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@apollo/client": "^3.9.10",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.24",
     "graphql": "^16.8.1",
+    "lucide-react": "^0.376.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
